# llamalend-loan-visualizer

./: .gitignore  README.md  app.py  llamma_loan.py  pyproject.toml  rerender.py  visualize_loan.py
analysis/: classify_loans.py  find_interesting_loans.py
analysis/data/: crvusd_user_loan_details.csv  loans_below_sl.csv  loans_into_sl.csv  loans_into_then_above_sl.csv  loans_under_then_above_sl.csv
static/: index.html
